<resources>
    <string name="app_name">UEN KMC</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="btnDownload" translatable="false">Download Data</string>
    <string name="options">Options</string>
    <string name="action_database">Database Manager</string>
    <string name="action_data_sync">Sync Data</string>
    <string name="btnLogin">Login</string>
    <string name="country">Language (Click to change)</string>
    <string name="downData">Download Data</string>
    <string name="open_household_form">OPEN NEW FORM</string>
    <string name="download_data">Download Data</string>
    <string name="upload_data">Upload Data</string>
    <string name="folder_not_created"> Folder Not Created </string>
    <string name="network_conn_error"> Network connection not available ! </string>
    <string name="invalid_password"> Invalid Password </string>
    <string name="username_required"> Username is required. </string>
    <string name="incorrect_username_or_password">Incorrect Username or Password</string>
    <string name="confirmPassword" translatable="false">Confirm Password</string>
    <string name="btnResetPassword">Reset Password</string>
    <string name="istatus"> Result of Household Questionnaire interview </string>
    <string name="istatusi"> Discuss any result not completed with team leader </string>
    <string name="istatus01"> Completed </string>
    <string name="istatus02"> No household member at home or no competent respondent at home at time of visit </string>
    <string name="istatus03"> Entire household is absent for extended period </string>
    <string name="istatus04"> Refused </string>
    <string name="istatus05"> Dwelling vacant or address not a dwelling </string>
    <string name="istatus06"> Dwelling not found </string>
    <string name="istatus07"> No Child or adolescent 18 years or below present in the HH </string>
    <string name="istatus08"> No MWRA 18 or above of age live in this household ? </string>
    <string name="istatus96"> Other (Specify) </string>
    <string name="fail_db_upd"> Failed to Update Database! </string>
    <string name="upd_db_form"> updateDB(Form):\t </string>
    <string name="upd_db_error"> Updating Database… ERROR! </string>
    <string name="db_excp_error"> Database Exception... ERROR! </string>
    <string name="upd_db"> Updating Database...\t </string>
    <string name="backPress"> Back Press Not Allowed </string>
    <string name="invalid_response"> Invalid Response </string>
    <string name="open_hh_form" translatable="false"> Open Survey Form </string>
    <string name="lhw_locked"> This LHW has been locked </string>
    <string name="hh_exists_form"> hhExists(HHForm): \t </string>
    <string name="section1identificationandenrollmentinformation_mainheading">Section 1: Identification and Enrollment Information: </string>
    <string name="section2mothersreproductivehistory_mainheading">Section 2: Mother’s Reproductive History: </string>
    <string name="section3birthdetailsofbaby_mainheading">Section 3. BIRTH DETAILS OF BABY: </string>
    <string name="section4newbornexamination_mainheading">Section 4: Newborn Examination: </string>
    <string name="section2basicinformationoffollowupvisit_mainheading">Section 2: Basic Information of Follow-up visit: </string>
    <string name="section3newbornsassessment_mainheading">Section 3: Newborn’s Assessment: </string>
    <string name="section4possibleseriousbacterialinfection_mainheading">Section 4: Possible Serious Bacterial Infection: </string>
    <string name="section5immediatefeedingafterbirth_mainheading">Section 5:  IMMEDIATE FEEDING AFTER BIRTH: </string>
    <string name="section6communitykmcteaching_mainheading">Section 6: Community KMC Teaching : </string>
    <string name="section7communitykmcpractice_mainheading">Section 7: Community KMC Practice : </string>
    <string name="section4breastfeeding_mainheading">Section 4: Breast Feeding: </string>
    <string name="section5facilitykmcteaching_mainheading">Section 5: Facility KMC Teaching : </string>
    <string name="section6facilitykmcpractice_mainheading">Section 6: Facility KMC Practice: </string>
    <string name="participanteligibilitycommunityscreeningform_mainheading">Participant Eligibility: Community Screening Form: </string>
    <string name="participanteligibilityfacilityscreeningform_mainheading">Participant Eligibility: Facility Screening Form: </string>
    <string name="btnSync">Download Data</string>
    <string name="btnUpload">Upload Data</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="splashText"> </string>
    <string name="splashText2">  </string>
    <string name="check_pending_forms">CHECK PENDING FORMS</string>
    <string name="open_new_form">OPEN NEW FORM</string>
    <string name="records_summary">Records Summary</string>
    <string name="main_menu">Main Menu</string>
    <string name="only_for_testing">ONLY FOR TESTING</string>
    <string name="database">Database</string>
    <string name="no"> No </string>
    <string name="dkn"> Don’t Know </string>
    <string name="none"> No one </string>
    <string name="never"> Never</string>
    <string name="na"> Applicable /Not Available  </string>
    <string name="nap"> Not Applicable </string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="nav">Not Available </string>
    <string name="ref"> Refused </string>
    <string name="other"> Other </string>
    <string name="specify"> Please explain </string>
    <string name="year"> Year </string>
    <string name="month"> Month </string>
    <string name="weeks"> Week </string>
    <string name="days"> Day </string>
    <string name="hours"> Hour </string>
    <string name="minutes"> Minutes </string>
    <string name="kg"> Kilograms </string>
    <string name="km"> Kilometers </string>
    <string name="cm"> cm </string>
    <string name="in"> Inch </string>
    <string name="rupees">  Rupees </string>
    <string name="num"> Number </string>
    <string name="name"> Name </string>
    <string name="contactnum">Contact Number </string>
    <string name="checkHHpresent"> The name of head of the household corresponds to the line listing data.</string>
    <string name="newHHheadname"> Name of new head of the household </string>
    <string name="f5title">Recruitment Form: Day of Delivery (Community OR Facility)</string>
    <string name="f5s1title">Section 1: Identification and Enrollment Information</string>
    <string name="f5instr">To be filled by data collector, contact details should be asked to the Mother or her attendant</string>
    <string name="f5101">Enrolment site</string>
    <string name="f5102">Tehsil</string>
    <string name="f5103">Union Council Name</string>
    <string name="f5104">Village Name</string>
    <string name="f5105">Complete residential address</string>
    <string name="f5106">Contact Number</string>
    <string name="f5107">Head of the household Name</string>
    <string name="f5108">No. of family members in HH</string>
    <string name="f5109">No. of under 5 children in HH</string>
    <string name="f5110">Newborn study number</string>
    <string name="f5111">Name of enrolled mother</string>
    <string name="f5112">ID of Enrolled mother</string>
    <string name="f5113">Consent obtained</string>
    <string name="f5113a">Yes</string>
    <string name="f5113b">No</string>
    <string name="f5s2title">Section 2: Mother’s Reproductive History</string>
    <string name="f5s2inst">Ask this information from Mother. </string>
    <string name="f5201">Mother Age</string>
    <string name="f5202">Education level of the mother</string>
    <string name="f5202a">None</string>
    <string name="f5202b">Pre-Primary</string>
    <string name="f5202c">Primary (1-5)</string>
    <string name="f5202d">Middle (6-8)</string>
    <string name="f5202e">Secondary (9-10)</string>
    <string name="f5202f">Intermediate</string>
    <string name="f5202g">Graduation</string>
    <string name="f5202h">Masters</string>
    <string name="f5202i">PhD</string>
    <string name="f5202j">Diploma (IT/Electrical, Mechanical, Civil)</string>
    <string name="f5202k">Religious Education (Hafiz/Aalim)</string>
    <string name="f5203">Date of delivery for current pregnancy</string>
    <string name="f5203d">Day</string>
    <string name="f5203m">Month</string>
    <string name="f5203y">Year</string>
    <string name="f5204">What is the time of birth?</string>
    <string name="f5204h">Hours</string>
    <string name="f5204m">Minutes</string>
    <string name="f5205">What is the sex of the baby? </string>
    <string name="f5205a"> Male</string>
    <string name="f5205m"> Female</string>
    <string name="f5206">Type of delivery</string>
    <string name="f5206a">Spontaneous vaginal delivery</string>
    <string name="f5206b">Assisted vaginal delivery (vacuum/forceps)</string>
    <string name="f5206c">C-Section</string>
    <string name="f5207">Was this birth singleton or multiple?</string>
    <string name="f5207a">Singleton</string>
    <string name="f5207b">Multiple</string>
    <string name="f5208">If multiple birth, what is the birth order of this baby?</string>
    <string name="f5209">Total number of pregnancies including current</string>
    <string name="f5210">Total number of deliveries including current</string>
    <string name="f5211">Did you ever had a preterm birth previously (gestational age &lt; 37 weeks)</string>
    <string name="f5211a">Yes</string>
    <string name="f5211b">No</string>
    <string name="f5212">Did you ever had a low birth weight baby previously (&lt;2500gm)</string>
    <string name="f5212a">Yes</string>
    <string name="f5212b">No</string>
    <string name="f5213">Did you seek antenatal care for the current pregnancy?</string>
    <string name="f5213a">Yes</string>
    <string name="f5213b">No</string>
    <string name="f5214">If yes, how many times did you seek antenatal care?</string>
    <string name="f6s3title">Section 3: Newborn’s Assessment</string>
    <string name="f6301">Measure the weight of baby in grams </string>
    <string name="f6302">Did the baby currently have red swollen area around the umbilical cord and discharge of pus? (Omphalitis: Infection of umbilical cord)</string>
    <string name="f6302a">Yes</string>
    <string name="f6302b">No</string>
    <string name="f6303">If yes, what is the severity of infection </string>
    <string name="f6303a">Moist cord</string>
    <string name="f6303b">Drainage of pus with a bad smell</string>
    <string name="f6303c">Red, swollen skin around the umbilicus</string>
    <string name="f6303d">Distended abdomen (a sign of sepsis)</string>
    <string name="f6303e">Mild (inflammation limited to the cord stump)</string>
    <string name="f6303f">Moderate (inflammation extending to the skin at the base of the cord stump less than 2cm)</string>
    <string name="f6303g">Severe (inflammation extending more than 2cm from the cord stump)</string>
    <string name="f6304">Did the baby currently have red swollen eyes?</string>
    <string name="f6304a">Yes</string>
    <string name="f6304b">No</string>
    <string name="f6305">If yes, what is the severity</string>
    <string name="f6305a">Eye infection with redness</string>
    <string name="f6305b">Swollen eyelids</string>
    <string name="f6305c">Sticky discharge from the eyes</string>
    <string name="f6305d">Pus discharge from the eyes</string>
</resources>