<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="form"
            type="edu.aku.hassannaqvi.uen_kmc.models.Form" />

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.uen_kmc.ui.sections.SectionF6S3Activity" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/GrpName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- f6s3title  Title   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVf6s3title"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/f6s3title" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- f6301  Input-Numeric   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVf6301"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/Q_f6301" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/f6301" />
                    </LinearLayout>

                    <com.edittextpicker.aliazaz.EditTextPicker
                        android:id="@+id/f6301"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/f6301"
                        android:inputType="number"
                        android:maxLength="3"
                        app:maxValue="100"
                        app:minValue="1"
                        app:type="range" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- f6302  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVf6302"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/Q_f6302" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/f6302" />
                    </LinearLayout>

                    <RadioGroup
                        android:id="@+id/f6302"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/f6302a"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/f6302a" />

                        <RadioButton
                            android:id="@+id/f6302b"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/f6302b" />
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- f6303  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVf6303"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/Q_f6303" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/f6303" />
                    </LinearLayout>

                    <RadioGroup
                        android:id="@+id/f6303"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/f6303a"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/f6303a" />

                        <RadioButton
                            android:id="@+id/f6303b"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/f6303b" />

                        <RadioButton
                            android:id="@+id/f6303c"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/f6303c" />

                        <RadioButton
                            android:id="@+id/f6303d"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/f6303d" />

                        <RadioButton
                            android:id="@+id/f6303e"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/f6303e" />

                        <RadioButton
                            android:id="@+id/f6303f"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/f6303f" />

                        <RadioButton
                            android:id="@+id/f6303g"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/f6303g" />
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- f6304  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVf6304"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/Q_f6304" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/f6304" />
                    </LinearLayout>

                    <RadioGroup
                        android:id="@+id/f6304"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/f6304a"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/f6304a" />

                        <RadioButton
                            android:id="@+id/f6304b"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/f6304b" />
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- f6305  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVf6305"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/Q_f6305" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/f6305" />
                    </LinearLayout>

                    <RadioGroup
                        android:id="@+id/f6305"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/f6305a"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/f6305a" />

                        <RadioButton
                            android:id="@+id/f6305b"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/f6305b" />

                        <RadioButton
                            android:id="@+id/f6305c"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/f6305c" />

                        <RadioButton
                            android:id="@+id/f6305d"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/f6305d" />
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <!--EndButton LinearLayout-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_End"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:background="@color/red_overlay"
                    android:onClick="btnEnd"
                    android:text="Cancel"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_Continue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:background="@color/green_overlay"
                    android:onClick="btnContinue"
                    android:text="Save"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>