<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="uen_kmc.ui.EndingActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="form"
            type="edu.aku.hassannaqvi.uen_kmc.models.Form" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <!-- CUSTOM TOOLBAR -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ToolbarTheme"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:subtitleTextAppearance="@style/Toolbar.SubtitleText"
            app:titleTextAppearance="@style/Toolbar.TitleText" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/fldGrpEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <!-- istatus  Radio   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/fldGrpCVistatus"
                    style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bottom"
                            android:orientation="horizontal">


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/istatus" />

                        </LinearLayout>

                        <RadioGroup
                            android:id="@+id/istatus"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/istatusa"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/istatus01" />

                            <RadioButton
                                android:id="@+id/istatusb"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/istatus02" />

                            <RadioButton
                                android:id="@+id/istatusc"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/istatus03" />

                            <RadioButton
                                android:id="@+id/istatusd"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/istatus04" />

                            <RadioButton
                                android:id="@+id/istatuse"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/istatus05" />

                            <RadioButton
                                android:id="@+id/istatusf"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/istatus06" />

                            <RadioButton
                                android:id="@+id/istatusg"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/istatus07" />

                            <RadioButton
                                android:id="@+id/istatush"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/istatus08" />

                            <RadioButton
                                android:id="@+id/istatus96"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/istatus96" />

                            <EditText
                                android:id="@+id/istatus96x"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:digits="AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz0123456789,. "
                                android:hint="@string/istatus96"
                                android:tag="istatus96"
                                android:text='@{istatus96.checked ? istatus96x.getText().toString() : ""}'
                                android:visibility='@{istatus96.checked? View.VISIBLE : View.GONE}' />

                        </RadioGroup>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <!--EndButton LinearLayout-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginTop="18dp"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <Button
                        android:id="@+id/btn_End"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/greenLight"
                        android:onClick="BtnEnd"
                        android:text="Save"
                        android:textColor="@color/white" />

                </LinearLayout>
                <!--EndButton LinearLayout-->

            </LinearLayout>

        </ScrollView>


    </LinearLayout>

</layout>